WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63008
wx printing fixes
https://bugs.webkit.org/show_bug.cgi?id=63008
Summary
wx printing fixes
Robin Dunn
Reported
2011-06-20 13:20:05 PDT
Created
attachment 97848
[details]
print fixes patch Make showing the dialog optional, and add handling for Javascript print() calls.
Attachments
print fixes patch
(9.67 KB, patch)
2011-06-20 13:20 PDT
,
Robin Dunn
kevino
: review+
kevino
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kevin Ollivier
Comment 1
2011-06-20 13:22:57 PDT
Landed in
r89284
, thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug