Reviewed by Kevin Ollivier.

Make showing the dialog optional, and add handling for Javascript print() calls.

https://bugs.webkit.org/show_bug.cgi?id=63008


Canonical link: https://commits.webkit.org/78605@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89284 268f45cc-cd09-0410-ab3c-d52691b4dbfc